--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,13 +1,7 @@
-<!-- <div class="header">
-  <div class="banner">
-    <%= image_tag "fiber.png", class: "image" %>
-  </div>
-</div> -->
-
 <div class="header-top">
   <div class="header-wrap">
     <div class="header-content">
-      <%= image_tag "fiber.png", class: "image" %>
-  </div>
+      <%= image_tag "fiber.png", class: "header-logo" %>
+    </div>
   </div>
 </div>
