--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,38 +1,48 @@
-
 <div class="row">
-  <div class="col s12 m6 offset-m3 center container-full-width">
+  <div class="col s12">
     <% if @not_found %>
-    <h1>Not found Motherfucka !</h1>
-    <%end%>
-    <div class="items">
-      <% @items.each do |c| %>
-        <div class="item" data-item='<%= c.id %>'>
-          <%= c.tumbnail_img %><br/>
-          <h1><%= c.name %><br/></h1>
-          <p>Price: $<%= c.price %> $<br/></p>
-          <p><%= c.description %><br/></p>
-          <p><%= c.gender %><br/></p>
-          <p><%= c.brand.name %><br/></p>
+      <h1>Not found Motherfucka !</h1>
+    <% end %>
 
-          <p><%= c.colors.first.name %><br/></p>
-          <% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == c.id } %>
-          <p>
-            <span class="like-count"> <%= c.item_likes.count %></span> likes<br/>
-          </p>
-          <div class="like-btn">
-            <% if item_like.nil? %>
-              <%= link_to 'like', item_item_likes_path(c.id, item_like), method: :post, remote: true %>
-            <% end %>
+
+    <div class="row">
+      <% @items.each do |c| %>
+        <div class="col s12 m6 l3">
+          <div class="card" data-item="<%= c.id %>">
+            <div class="card-image">
+              <%= image_tag c.tumbnail_img %><br/>
+            </div>
+            <div class="card-content">
+              <span class="card-title"><%= c.name %></span>
+              <% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == c.id } %>
+              <p>
+                <span class="like-count"><%= c.item_likes.count %></span> likes
+              </p>
+            </div>
+            <div class="card-action">
+              <div class="like-btn">
+                <% if item_like.nil? %>
+                  <%= link_to 'like', item_item_likes_path(c.id, item_like), method: :post, remote: true %>
+                <% end %>
+              </div>
+              <div class="unlike-btn">
+                <% unless item_like.nil? %>
+                  <%= link_to 'unlike', item_item_like_path(c.id, item_like), method: :delete, remote: true %><br/>
+                  <% end %>
+              </div>
+            </div>
           </div>
-          <div class="unlike-btn">
-            <% unless item_like.nil? %>
-              <%= link_to 'unlike', item_item_like_path(c.id, item_like), method: :delete, remote: true %><br/>
-              <% end %>
-          </div>
+          <p>Price: $<%= c.price %></p>
+<!--           <p><%= c.description %></p>
+          <p><%= c.gender %></p>
+          <p><%= c.brand.name %></p>
+          <p><%= c.colors.first.name %></p> -->
+
         </div>
       <% end %>
     </div>
   </div>
+
 </div>
 
 
