--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -6,6 +6,9 @@
   <%= f.label "Search" %>
   <%= f.search_field :name_or_brand_name_or_shop_name_or_colors_name_cont %>
 
+  <%= f.label "City" %>
+  <%= f.search_field :shop_city_eq %>
+
   <%= f.label :price_gteq, "Min Price" %>
   <%= f.search_field :price_gteq %>
 
@@ -13,24 +16,29 @@
   <%= f.search_field :price_lteq %>
 
   <%= f.label "Gender" %>
-  <%= f.select :gender_eq, options_for_select([['Select', ''], ['Male'], ['Female']]), include_blank: true %>
+  <%= f.select :gender_eq, options_for_select([['Male'], ['Female']]), include_blank: true %>
 
   <%= f.label "Color" %>
   <%= f.select :colors_id_eq, options_from_collection_for_select(Color.all, "id", "name", @q.colors_id_eq), include_blank: true %>
 
-  <%= f.label "City" %>
-  <%= f.search_field :shop_city_eq %>
-
-
   <%= f.label "Category" %>
-  <%= f.select :subcategories_category_id_eq,options_from_collection_for_select(Category.all, "id", "name", @q.subcategories_category_id_eq), include_blank: true %>
+  <%= f.select :subcategories_category_id_eq,options_from_collection_for_select(
+      Category.all,
+      "id", "name",
+      @q.subcategories_category_id_eq
+    ), include_blank: true %>
+
 
   <%= f.label "Subcategory" %>
-  <%= f.select :subcategories_id_eq, options_from_collection_for_select(Subcategory.all, "id", "name", @q.subcategories_id_eq), include_blank: true %>
-
+  <%= f.select :subcategories_id_eq,  options_for_select(
+      Subcategory.all.map { |sc| [sc.name, sc.id, { 'data-category' => sc.category_id }] }
+    ), include_blank: true %>
 
   <%= f.label "Size" %>
-  <%= f.select :sizes_id_eq, options_from_collection_for_select(Size.all, "id", "value", @q.sizes_id_eq), include_blank: true %>
+  <%= f.select :sizes_id_eq, options_for_select(
+    Size.all.map { |si| [si.value, si.id, { 'data-category' => si.category_id
+      }] }
+  ), include_blank: true %>
 
 
   <%= f.submit %>
