--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
 @import "components/index";
 @import "pages/index";
 @import "vendor/index";
-
+@import "profile_header";
 @import "materialize";
 
 .full-screen-video{
