--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,24 @@
-<h2>Profile Page</h2><br/>
-<h3><%= current_user.user_name %></h3>
-
-<h5>
-First Name: <%= current_user.first_name %><br/>
-Last Name: <%= current_user.last_name %><br/>
-Gender: <%= current_user.gender %><br/>
-Email: <%= current_user.email %><br/>
-</h5>
-
+<div class="profile-banner">
+<div class="row">
+  <div class="col s6 m6">
+    <img src="http://cps-static.rovicorp.com/3/JPG_500/MI0000/049/MI0000049473.jpg?partner=allrovi.com" class="avatar-profile">
+  </div>
+  <div class="col s6 m6" align="right">
+    <strong>
+      <h5><%= current_user.user_name %></h5>
+      <h5>
+        <span class='user-like-count'>
+          <%= current_user.liked_items.count %>
+        </span>
+        likes
+      </h5>
+    </strong>
+  </div>
+  </div>
+</div>
 
 <% current_user.liked_items.each do |item| %>
-  <div class='profil item' data-item='<%= item.id %>'>
+<div class='profil item' data-item='<%= item.id %>'>
   <%= item.tumbnail_img %><br/>
   <%= item.name %><br/>
   <%= item.price %> $<br/>
@@ -19,10 +27,10 @@ Email: <%= current_user.email %><br/>
   <%= item.brand.name %><br/>
   <%= item.colors.map(&:name).join(', ') %><br/>
   <% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == item.id} %>
-    <%= item.item_likes.count %> likes<br/>
-    <%= link_to 'unlike', item_item_like_path(item.id, item_like), remote: true, method: :delete %><br/>
-    <button class="btn btn-primary">Order</button>
-    <br/>
-  </div>
+  <%= item.item_likes.count %> likes<br/>
+  <%= link_to 'unlike', item_item_like_path(item.id, item_like), remote: true, method: :delete %><br/>
+  <button class="btn btn-primary">Order</button>
+  <br/>
+</div>
 <% end %>
 
