those wonderfull cards i made are amazinggg BRO

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
 @import "pages/index";
 @import "vendor/index";
 @import "profile_header";
+@import "modal";
+@import "card";
 @import "materialize";
 
 .full-screen-video{
