--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,17 +7,20 @@
 
     <div class="row">
       <% @items.each do |c| %>
-        <div class="col s12 m6 l3">
+        <div class="col s6 m6 l3">
           <div class="card" data-item="<%= c.id %>">
-            <div class="card-image">
-              <%= image_tag c.tumbnail_img %><br/>
-            </div>
+            <a class="modal-trigger  waves-light " href="#modal<%= c.id %>">
+              <div class="card-image">
+                <%= image_tag c.tumbnail_img %>
+              </div>
+            </a>
             <div class="card-content">
-              <span class="card-title"><%= c.name %></span>
+              <div class="card-title"><%= c.name %></div>
               <% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == c.id } %>
-              <p>
+
+              <p>Price: $<%= c.price %></p>
                 <span class="like-count"><%= c.item_likes.count %></span> likes
-              </p>
+
             </div>
             <div class="card-action">
               <div class="like-btn">
@@ -32,22 +35,61 @@
               </div>
             </div>
           </div>
-          <p>Price: $<%= c.price %></p>
-<!--           <p><%= c.description %></p>
-          <p><%= c.gender %></p>
-          <p><%= c.brand.name %></p>
-          <p><%= c.colors.first.name %></p> -->
-
         </div>
       <% end %>
     </div>
   </div>
-
 </div>
 
+<!-- Modal Structure -->
+<% @items.each do |c| %>
+  <div id="modal<%= c.id %>" class="modal" data-item="<%= c.id %>">
+    <% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == c.id } %>
+    <div class="modal-content">
+      <div class="center">
+        <h4><%= c.name %></h4>
+          <%= image_tag c.tumbnail_img, class: "modal-image" %><br/>
+          <br/>
+          Price: $<%= c.price %> <br/>
+          <span class="like-count"><%= c.item_likes.count %></span> likes
+          <br/>
+          <br/>
+      </div>
+      <div class= "row">
+        <div class= "col s6 m6">
+          Description: <%= c.description %><br/>
+        </div>
+        <div class= "col s6 m6">
+          Gender: <%= c.gender %><br/>
+          Brand: <%= c.brand.name %><br/>
+          Colors: <%= c.colors.map(&:name).join(', ') %><br/>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal-footer ">
+      <div class="like-btn modal-close btn-flat">
+        <% if item_like.nil? %>
+          <%= link_to 'like', item_item_likes_path(c.id, item_like), method: :post, remote: true %>
+        <% end %>
+      </div>
+      <div class="unlike-btn modal-close btn-flat">
+        <% unless item_like.nil? %>
+          <%= link_to 'unlike', item_item_like_path(c.id, item_like), method: :delete, remote: true %><br/>
+        <% end %>
+      </div>
+      <a href="#!" class=" modal-action modal-close waves-effect waves-red btn-flat">Close</a>
+    </div>
+  </div>
+<% end %>
 
 
-
+<script>
+    $(document).ready(function(){
+    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+    $('.modal').modal();
+  });
+</script>
 
 
 
