add order route & view

--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -1,13 +1,7 @@
-<h1>Place an Order</h1>
+<h1>Place an order</h1>
 
-<% current_user.liked_items.each do |item| %>
 
-  <%= item.tumbnail_img %><br/>
-  <%= item.name %><br/>
-  <%= item.price %> $<br/>
-  <%= item.description %><br/>
-  <%= item.gender %><br/>
-  <%= item.brand.name %><br/>
-  <%= item.colors.map(&:name).join(', ') %><br/>
 
-<% end %>
+
+
+
