--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,12 +6,12 @@
   <div class="col s6 m6" align="right">
     <strong>
       <h5><%= current_user.user_name %></h5>
-      <h5>
+      <h6>
         <span class='user-like-count'>
           <%= current_user.liked_items.count %>
         </span>
-        likes
-      </h5>
+        <br/>likes
+      </h6>
     </strong>
   </div>
   </div>
@@ -29,8 +29,10 @@
   <% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == item.id} %>
   <%= item.item_likes.count %> likes<br/>
   <%= link_to 'unlike', item_item_like_path(item.id, item_like), remote: true, method: :delete %><br/>
-  <button class="btn btn-primary">Order</button>
+  <%= link_to item_orders_path(item.id), method: :post do %>
+  <div class="btn btn-primary">Order</div>
   <br/>
+  <% end %>
 </div>
 <% end %>
 
