Css: Responsiveness Back

--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -1,15 +1,15 @@
-.card { width:180px !important;
-  height:534px !important;
-}
+// .card { width:180px !important;
+//   height:534px !important;
+// }
 
-.card-content{
-  height: 180px;
+// .card-content{
+//   height: 180px;
 
-}.card-title{
-      height: 70px;
-    overflow: hidden;
-}
+// }.card-title{
+//       height: 70px;
+//     overflow: hidden;
+// }
 
-.card .card-content .card-title {
-  line-height: 30px !important;
-}
+// .card .card-content .card-title {
+//   line-height: 30px !important;
+// }
