--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>F!BER ShoppingAid</title>
+    <title>F!BER ShoppingAid</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
+
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700&amp;subset=latin-ext" rel="stylesheet">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <%= javascript_include_tag 'application' %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
   </head>
 
   <body>
-  <div id="header" class="header">
-  <%= render '../views/partials/header' %>
-  </div>
-
-  <main>
-    <div id="container" class="padding-bottom-100 padding-top-60">
-      <%= yield %>
+    <div id="header" class="header">
+      <%= render '../views/partials/header' %>
     </div>
-  </main>
-  <% unless current_user.nil? %>
-    <%= render '../views/partials/footer' %>
-  <% end %>
+
+    <main>
+      <div id="container" class="padding-bottom-100 padding-top-60">
+        <%= yield %>
+      </div>
+    </main>
+    <% unless current_user.nil? %>
+      <%= render '../views/partials/footer' %>
+    <% end %>
   </body>
 </html>
