--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,7 +1,3 @@
-<div class="header-top">
-  <div class="header-wrap">
-    <div class="header-content">
-      <%= image_tag "fiber.png", class: "header-logo" %>
-    </div>
-  </div>
+<div class="header">
+	<%= image_tag "logos/fiber_logo_grey.png", class: "header-logo" %>
 </div>
