--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -23,9 +23,9 @@ $base-height: 1.4;
 // Scheme
 $brand-color: #D23333;
 
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
+$red: #E83726;
+$blue: #181d4A;
+$yellow: #E18745;
 $orange: #E67E22;
 $green: #32B796;
-$gray: #000000;
+$gray: #EAE7D5;
