--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,13 +1,24 @@
-<h1>Place an order</h1>
-
-  <div>
-    <%= @order.item.tumbnail_img  %>
-    <%= @order.item.name %>
-    Brand: <%= @order.item.brand.name %>
-    Shop: <%= @order.item.shop.name %>
-    Price: <%= @order.item.price %>
-    Advance: <%= @order.item.downpayment_price %>
-    City: <%= @order.item.shop.city %>
+<div class="center">
+  <h1>Order for: <%= @order.item.name %></h1>
+</div>
+  <div class="row">
+    <div class="col s12 m6 l3">
+      <div class="center-align">
+        <div class="card">
+          <a class="modal-trigger  waves-light ">
+            <div class="card-image">
+              <%= image_tag @order.item.tumbnail_img  %>
+            </div>
+          </a>
+          <%= @order.item.name %></br>
+          Brand: <%= @order.item.brand.name %> </br>
+          Shop: <%= @order.item.shop.name %></br>
+          Price: <%= @order.item.price %></br>
+          Advance: <%= @order.item.downpayment_price %></br>
+          City: <%= @order.item.shop.city %>
+        </div>
+      </div>
+    </div>
   </div>
 
 
