--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,10 @@ body {
   color: black !important;
 }
 
+.btn {
+  background-color: #E83726 !important;
+}
+
 .full-screen-video{
   z-index: -10;
   width: 316%;
