--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -3,11 +3,11 @@
 <div class="landing-container valign-wrapper">
   <div class="valign center-align">
     <div>
-    <%= link_to 'Login', new_user_session_path, class: "btn red lighten-1 devise-btn" %>
-      <%= link_to 'Sign Up', new_user_registration_path, class: "btn red lighten-1 devise-btn" %>
+    <%= link_to 'Login', new_user_session_path, class: "btn devise-btn" %>
+      <%= link_to 'Sign Up', new_user_registration_path, class: "btn devise-btn" %>
     </div>
     <div>
-      <%= link_to "Sign Up with Facebook", user_facebook_omniauth_authorize_path, class: "btn blue darken-4 devise-btn" %>
+      <%= link_to "Sign Up with Facebook", user_facebook_omniauth_authorize_path, class: "btn devise-btn" %>
     </div>
   </div>
 </div>
