Profile: Avatar Styling

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="profile-banner">
 <div class="row">
   <div class="col s6 m6">
-    <img src="http://cps-static.rovicorp.com/3/JPG_500/MI0000/049/MI0000049473.jpg?partner=allrovi.com" class="avatar-profile">
+    <%= user_avatar(class: 'fa-4x avatar-profile') %>
     <br/>
     <br/>
     Items <%= current_user.first_name %> liked.
