--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -18,8 +18,9 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
-
 .avatar-profile {
-  width: 100px;
+  width: 64px;
+  height: 64px;
   border-radius: 50%;
+  box-shadow: 0px 0px 30px 1px rgba(0,0,0,0.45);
 }
